@@ -4,27 +4,33 @@ public class Elevador implements Runnable{
 	private Estado estado;
 	private ArrayList<Passageiro> passageiros;
 	private int andar;
-	private Thread thread;
 
 	public Elevador(String nome,Passageiro passageiro) {
 		setEstado(Estado.parado);
+		passageiros = new ArrayList<>();
 		passageiros.add(passageiro);
 		new Thread(this,nome).start();
-		
 	}
 
 	@Override
 	public void run() {
-		while(!passageiros.isEmpty()){
-			passageiros.add(Main.getFirst());
+		try{
+			while(!passageiros.isEmpty()){
+				Thread.sleep(30);
+				System.out.println(passageiros.get(0).getID());
+				passageiros.add(Main.getFirst());
+				System.out.println("size"+passageiros.size());
+			}
+		} catch(InterruptedException e) {
+			e.printStackTrace();
 		}
 	}
 
 	public void goToFloor(int here, int goTo) {
 		try {
 			for(int i=here; i <= goTo ;i++) {
-				
-				thread.sleep(30);
+
+				Thread.sleep(30);
 			}
 		} catch (InterruptedException e) {
 			e.printStackTrace();
